# slurm

./: NEWS  configure  slurm.spec
doc/man/man5/: slurm.conf.5
etc/: cgroup.release_common.example
src/api/: job_info.c
src/common/: job_resources.c  job_resources.h  xcgroup.c  xcgroup_read_config.c  xcpuinfo.c
src/plugins/proctrack/cgroup/: Makefile.am  Makefile.in  proctrack_cgroup.c
src/plugins/select/bluegene/: ba_common.h  bg_structs.h  select_bluegene.c
src/plugins/select/bluegene/ba/: block_allocator.c
src/plugins/select/linear/: select_linear.c
src/plugins/task/cgroup/: Makefile.am  Makefile.in  task_cgroup.c  task_cgroup_cpuset.c  task_cgroup_memory.c
src/sattach/: attach.h  sattach.c
src/scontrol/: info_job.c
src/slurmctld/: job_mgr.c  job_scheduler.c
src/slurmd/slurmd/: req.c  slurmd.c
